--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 upload.path=uploadfiles
 quarkus.package.jar.type=uber-jar
-quarkus.http.limits.max-body-size=1G
+quarkus.http.limits.max-body-size=30M
+quarkus.http.limits.max-form-attribute-size=20M
 
 # logging
 quarkus.log.file.enable=true
