--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 upload.path=uploadfiles
-quarkus.package.jar.type=uber-jar
+#quarkus.package.jar.type=uber-jar
 quarkus.http.limits.max-body-size=30M
 quarkus.http.limits.max-form-attribute-size=20M
 
